2_Parser/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 inputName: ID

    7 inputNumber: NUM

    8 var_declaration: type_specifier inputName SEMI
    9                | type_specifier inputName LBRACE inputNumber RBRACE SEMI

   10 type_specifier: INT
   11               | VOID

   12 @1: %empty

   13 fun_declaration: type_specifier inputName @1 LPAREN params RPAREN compound_stmt

   14 params: param_list
   15       | VOID

   16 param_list: param_list COMMA param
   17           | param

   18 param: type_specifier inputName
   19      | type_specifier inputName LBRACE RBRACE

   20 compound_stmt: LCURLY local_declarations statement_list RCURLY

   21 local_declarations: local_declarations var_declaration
   22                   | %empty

   23 statement_list: statement_list statement
   24               | %empty

   25 statement: expression_stmt
   26          | compound_stmt
   27          | selection_stmt
   28          | iteration_stmt
   29          | return_stmt

   30 expression_stmt: expression SEMI
   31                | SEMI

   32 selection_stmt: IF LPAREN expression RPAREN statement
   33               | IF LPAREN expression RPAREN statement ELSE statement

   34 iteration_stmt: WHILE LPAREN expression RPAREN statement

   35 return_stmt: RETURN SEMI
   36            | RETURN expression SEMI

   37 expression: var ASSIGN expression
   38           | simple_expression

   39 var: inputName

   40 @2: %empty

   41 var: inputName @2 LBRACE expression RBRACE

   42 simple_expression: additive_expression relop additive_expression
   43                  | additive_expression

   44 relop: EQ
   45      | NE
   46      | LT
   47      | LE
   48      | GT
   49      | GE

   50 additive_expression: additive_expression addop term
   51                    | term

   52 addop: PLUS
   53      | MINUS

   54 term: term mulop factor
   55     | factor

   56 mulop: TIMES
   57      | OVER

   58 factor: LPAREN expression RPAREN
   59       | var
   60       | call
   61       | NUM

   62 @3: %empty

   63 call: inputName @3 LPAREN args RPAREN

   64 args: arg_list
   65     | %empty

   66 arg_list: arg_list COMMA expression
   67         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IFX (258)
IF (259) 32 33
ELSE (260) 33
INT (261) 10
RETURN (262) 35 36
VOID (263) 11 15
WHILE (264) 34
ID (265) 6
NUM (266) 7 61
EQ (267) 44
NE (268) 45
LT (269) 46
LE (270) 47
GT (271) 48
GE (272) 49
SEMI (273) 8 9 30 31 35 36
LPAREN (274) 13 32 33 34 58 63
RPAREN (275) 13 32 33 34 58 63
LBRACE (276) 9 19 41
RBRACE (277) 9 19 41
LCURLY (278) 20
RCURLY (279) 20
PLUS (280) 52
MINUS (281) 53
TIMES (282) 56
OVER (283) 57
COMMA (284) 16 66
ASSIGN (285) 37
ERROR (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
declaration_list (34)
    on left: 2 3, on right: 1 2
declaration (35)
    on left: 4 5, on right: 2 3
inputName (36)
    on left: 6, on right: 8 9 13 18 19 39 41 63
inputNumber (37)
    on left: 7, on right: 9
var_declaration (38)
    on left: 8 9, on right: 4 21
type_specifier (39)
    on left: 10 11, on right: 8 9 13 18 19
fun_declaration (40)
    on left: 13, on right: 5
@1 (41)
    on left: 12, on right: 13
params (42)
    on left: 14 15, on right: 13
param_list (43)
    on left: 16 17, on right: 14 16
param (44)
    on left: 18 19, on right: 16 17
compound_stmt (45)
    on left: 20, on right: 13 26
local_declarations (46)
    on left: 21 22, on right: 20 21
statement_list (47)
    on left: 23 24, on right: 20 23
statement (48)
    on left: 25 26 27 28 29, on right: 23 32 33 34
expression_stmt (49)
    on left: 30 31, on right: 25
selection_stmt (50)
    on left: 32 33, on right: 27
iteration_stmt (51)
    on left: 34, on right: 28
return_stmt (52)
    on left: 35 36, on right: 29
expression (53)
    on left: 37 38, on right: 30 32 33 34 36 37 41 58 66 67
var (54)
    on left: 39 41, on right: 37 59
@2 (55)
    on left: 40, on right: 41
simple_expression (56)
    on left: 42 43, on right: 38
relop (57)
    on left: 44 45 46 47 48 49, on right: 42
additive_expression (58)
    on left: 50 51, on right: 42 43 50
addop (59)
    on left: 52 53, on right: 50
term (60)
    on left: 54 55, on right: 50 51 54
mulop (61)
    on left: 56 57, on right: 54
factor (62)
    on left: 58 59 60 61, on right: 54 55
call (63)
    on left: 63, on right: 60
@3 (64)
    on left: 62, on right: 63
args (65)
    on left: 64 65, on right: 63
arg_list (66)
    on left: 66 67, on right: 64 66


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


State 2

   11 type_specifier: VOID .

    $default  reduce using rule 11 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 5

    2 declaration_list: declaration . declaration_list
    3                 | declaration .

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 3 (declaration_list)

    declaration_list  go to state 10
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    8 var_declaration: type_specifier . inputName SEMI
    9                | type_specifier . inputName LBRACE inputNumber RBRACE SEMI
   13 fun_declaration: type_specifier . inputName @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    inputName  go to state 12


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration declaration_list .

    $default  reduce using rule 2 (declaration_list)


State 11

    6 inputName: ID .

    $default  reduce using rule 6 (inputName)


State 12

    8 var_declaration: type_specifier inputName . SEMI
    9                | type_specifier inputName . LBRACE inputNumber RBRACE SEMI
   13 fun_declaration: type_specifier inputName . @1 LPAREN params RPAREN compound_stmt

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


State 13

    8 var_declaration: type_specifier inputName SEMI .

    $default  reduce using rule 8 (var_declaration)


State 14

    9 var_declaration: type_specifier inputName LBRACE . inputNumber RBRACE SEMI

    NUM  shift, and go to state 16

    inputNumber  go to state 17


State 15

   13 fun_declaration: type_specifier inputName @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 18


State 16

    7 inputNumber: NUM .

    $default  reduce using rule 7 (inputNumber)


State 17

    9 var_declaration: type_specifier inputName LBRACE inputNumber . RBRACE SEMI

    RBRACE  shift, and go to state 19


State 18

   13 fun_declaration: type_specifier inputName @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 20

    type_specifier  go to state 21
    params          go to state 22
    param_list      go to state 23
    param           go to state 24


State 19

    9 var_declaration: type_specifier inputName LBRACE inputNumber RBRACE . SEMI

    SEMI  shift, and go to state 25


State 20

   11 type_specifier: VOID .
   15 params: VOID .

    RPAREN    reduce using rule 15 (params)
    $default  reduce using rule 11 (type_specifier)


State 21

   18 param: type_specifier . inputName
   19      | type_specifier . inputName LBRACE RBRACE

    ID  shift, and go to state 11

    inputName  go to state 26


State 22

   13 fun_declaration: type_specifier inputName @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 27


State 23

   14 params: param_list .
   16 param_list: param_list . COMMA param

    COMMA  shift, and go to state 28

    $default  reduce using rule 14 (params)


State 24

   17 param_list: param .

    $default  reduce using rule 17 (param_list)


State 25

    9 var_declaration: type_specifier inputName LBRACE inputNumber RBRACE SEMI .

    $default  reduce using rule 9 (var_declaration)


State 26

   18 param: type_specifier inputName .
   19      | type_specifier inputName . LBRACE RBRACE

    LBRACE  shift, and go to state 29

    $default  reduce using rule 18 (param)


State 27

   13 fun_declaration: type_specifier inputName @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 30

    compound_stmt  go to state 31


State 28

   16 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 21
    param           go to state 32


State 29

   19 param: type_specifier inputName LBRACE . RBRACE

    RBRACE  shift, and go to state 33


State 30

   20 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 22 (local_declarations)

    local_declarations  go to state 34


State 31

   13 fun_declaration: type_specifier inputName @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


State 32

   16 param_list: param_list COMMA param .

    $default  reduce using rule 16 (param_list)


State 33

   19 param: type_specifier inputName LBRACE RBRACE .

    $default  reduce using rule 19 (param)


State 34

   20 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   21 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 24 (statement_list)

    var_declaration  go to state 35
    type_specifier   go to state 36
    statement_list   go to state 37


State 35

   21 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 21 (local_declarations)


State 36

    8 var_declaration: type_specifier . inputName SEMI
    9                | type_specifier . inputName LBRACE inputNumber RBRACE SEMI

    ID  shift, and go to state 11

    inputName  go to state 38


State 37

   20 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   23 statement_list: statement_list . statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    SEMI    shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30
    RCURLY  shift, and go to state 45

    inputName            go to state 46
    compound_stmt        go to state 47
    statement            go to state 48
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 38

    8 var_declaration: type_specifier inputName . SEMI
    9                | type_specifier inputName . LBRACE inputNumber RBRACE SEMI

    SEMI    shift, and go to state 13
    LBRACE  shift, and go to state 14


State 39

   32 selection_stmt: IF . LPAREN expression RPAREN statement
   33               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 40

   35 return_stmt: RETURN . SEMI
   36            | RETURN . expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    SEMI    shift, and go to state 61
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 62
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 41

   34 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 63


State 42

   61 factor: NUM .

    $default  reduce using rule 61 (factor)


State 43

   31 expression_stmt: SEMI .

    $default  reduce using rule 31 (expression_stmt)


State 44

   58 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 64
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 45

   20 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 20 (compound_stmt)


State 46

   39 var: inputName .
   41    | inputName . @2 LBRACE expression RBRACE
   63 call: inputName . @3 LPAREN args RPAREN

    LPAREN    reduce using rule 62 (@3)
    LBRACE    reduce using rule 40 (@2)
    $default  reduce using rule 39 (var)

    @2  go to state 65
    @3  go to state 66


State 47

   26 statement: compound_stmt .

    $default  reduce using rule 26 (statement)


State 48

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


State 49

   25 statement: expression_stmt .

    $default  reduce using rule 25 (statement)


State 50

   27 statement: selection_stmt .

    $default  reduce using rule 27 (statement)


State 51

   28 statement: iteration_stmt .

    $default  reduce using rule 28 (statement)


State 52

   29 statement: return_stmt .

    $default  reduce using rule 29 (statement)


State 53

   30 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 67


State 54

   37 expression: var . ASSIGN expression
   59 factor: var .

    ASSIGN  shift, and go to state 68

    $default  reduce using rule 59 (factor)


State 55

   38 expression: simple_expression .

    $default  reduce using rule 38 (expression)


State 56

   42 simple_expression: additive_expression . relop additive_expression
   43                  | additive_expression .
   50 additive_expression: additive_expression . addop term

    EQ     shift, and go to state 69
    NE     shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74
    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 43 (simple_expression)

    relop  go to state 77
    addop  go to state 78


State 57

   51 additive_expression: term .
   54 term: term . mulop factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 51 (additive_expression)

    mulop  go to state 81


State 58

   55 term: factor .

    $default  reduce using rule 55 (term)


State 59

   60 factor: call .

    $default  reduce using rule 60 (factor)


State 60

   32 selection_stmt: IF LPAREN . expression RPAREN statement
   33               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 82
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 61

   35 return_stmt: RETURN SEMI .

    $default  reduce using rule 35 (return_stmt)


State 62

   36 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 83


State 63

   34 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 84
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 64

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 85


State 65

   41 var: inputName @2 . LBRACE expression RBRACE

    LBRACE  shift, and go to state 86


State 66

   63 call: inputName @3 . LPAREN args RPAREN

    LPAREN  shift, and go to state 87


State 67

   30 expression_stmt: expression SEMI .

    $default  reduce using rule 30 (expression_stmt)


State 68

   37 expression: var ASSIGN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 88
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 69

   44 relop: EQ .

    $default  reduce using rule 44 (relop)


State 70

   45 relop: NE .

    $default  reduce using rule 45 (relop)


State 71

   46 relop: LT .

    $default  reduce using rule 46 (relop)


State 72

   47 relop: LE .

    $default  reduce using rule 47 (relop)


State 73

   48 relop: GT .

    $default  reduce using rule 48 (relop)


State 74

   49 relop: GE .

    $default  reduce using rule 49 (relop)


State 75

   52 addop: PLUS .

    $default  reduce using rule 52 (addop)


State 76

   53 addop: MINUS .

    $default  reduce using rule 53 (addop)


State 77

   42 simple_expression: additive_expression relop . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    var                  go to state 89
    additive_expression  go to state 90
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 78

   50 additive_expression: additive_expression addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName  go to state 46
    var        go to state 89
    term       go to state 91
    factor     go to state 58
    call       go to state 59


State 79

   56 mulop: TIMES .

    $default  reduce using rule 56 (mulop)


State 80

   57 mulop: OVER .

    $default  reduce using rule 57 (mulop)


State 81

   54 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName  go to state 46
    var        go to state 89
    factor     go to state 92
    call       go to state 59


State 82

   32 selection_stmt: IF LPAREN expression . RPAREN statement
   33               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 93


State 83

   36 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 36 (return_stmt)


State 84

   34 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 94


State 85

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


State 86

   41 var: inputName @2 LBRACE . expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 95
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 87

   63 call: inputName @3 LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    $default  reduce using rule 65 (args)

    inputName            go to state 46
    expression           go to state 96
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59
    args                 go to state 97
    arg_list             go to state 98


State 88

   37 expression: var ASSIGN expression .

    $default  reduce using rule 37 (expression)


State 89

   59 factor: var .

    $default  reduce using rule 59 (factor)


State 90

   42 simple_expression: additive_expression relop additive_expression .
   50 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 42 (simple_expression)

    addop  go to state 78


State 91

   50 additive_expression: additive_expression addop term .
   54 term: term . mulop factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 50 (additive_expression)

    mulop  go to state 81


State 92

   54 term: term mulop factor .

    $default  reduce using rule 54 (term)


State 93

   32 selection_stmt: IF LPAREN expression RPAREN . statement
   33               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    SEMI    shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30

    inputName            go to state 46
    compound_stmt        go to state 47
    statement            go to state 99
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 94

   34 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    SEMI    shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30

    inputName            go to state 46
    compound_stmt        go to state 47
    statement            go to state 100
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 95

   41 var: inputName @2 LBRACE expression . RBRACE

    RBRACE  shift, and go to state 101


State 96

   67 arg_list: expression .

    $default  reduce using rule 67 (arg_list)


State 97

   63 call: inputName @3 LPAREN args . RPAREN

    RPAREN  shift, and go to state 102


State 98

   64 args: arg_list .
   66 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 103

    $default  reduce using rule 64 (args)


State 99

   32 selection_stmt: IF LPAREN expression RPAREN statement .
   33               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 104

    $default  reduce using rule 32 (selection_stmt)


State 100

   34 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 34 (iteration_stmt)


State 101

   41 var: inputName @2 LBRACE expression RBRACE .

    $default  reduce using rule 41 (var)


State 102

   63 call: inputName @3 LPAREN args RPAREN .

    $default  reduce using rule 63 (call)


State 103

   66 arg_list: arg_list COMMA . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 44

    inputName            go to state 46
    expression           go to state 105
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 104

   33 selection_stmt: IF LPAREN expression RPAREN statement ELSE . statement

    IF      shift, and go to state 39
    RETURN  shift, and go to state 40
    WHILE   shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    SEMI    shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30

    inputName            go to state 46
    compound_stmt        go to state 47
    statement            go to state 106
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


State 105

   66 arg_list: arg_list COMMA expression .

    $default  reduce using rule 66 (arg_list)


State 106

   33 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 33 (selection_stmt)
